# DSVPWA

./: dsvpwa.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci-backup.yml.bak  ci-lint-build-push.yml  ci-security-yml  ci-security.yml  ci.yml  dast-zap-daily.yml  snyk-security.yml  verify-gitops-version.yml
.github/workflows/backup/: ci-security.yml.bak
dsvpwa/: __init__.py  attacks.py  handlers.py  server.py
static/css/: custom.css
templates/: login.html
